--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -27,3 +27,10 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+  run-tests:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Running tests..
+      run: |
+        npm run test
